# django-ckeditor-youtube-plugin

./: .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: automated-checks.yml  pypi-release.yml
django_ckeditor_youtube_plugin/: __init__.py
